--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 coverage==4.5.4
-cryptography==2.7
-Django==2.1.3
+cryptography==3.2
+Django==2.2.13
 django-admin==2.0.0
 django-admin-sso==2.4.0
 django-crispy-forms==1.7.2
@@ -34,7 +34,7 @@ Flask==1.1.1
 flask-oidc==1.4.0
 Flask-Testing==0.7.1
 future==0.18.0
-httplib2==0.14.0
+httplib2==0.18.0
 idna==2.8
 imagesize==1.1.0
 importlib-metadata==0.23
@@ -68,7 +68,7 @@ pytest-docker-compose==3.1.2
 python-jose==3.0.1
 python-keycloak==0.17.6
 pytz==2019.3
-PyYAML==3.13
+PyYAML==4.2b1
 rdflib==4.2.2
 rdflib-jsonld==0.4.0
 requests==2.22.0
